# Seijiten

./: .gitignore  README.md  main.py  pyproject.toml
db/: config.yml  database.py
models/: characters.py  franchises.py  models.py  people.py  seiyuus.py  users.py  voice_samples.py  works.py
